--- a/final.html
+++ b/final.html
@@ -63,8 +63,8 @@ Youtube貼り付けここまで-->
           </div>
           <div class="column">
             <div class="card">
-              <h3 class="card__title">このゲームの企画者</h3>
-              <p class="card__content">企画制作　名古屋キャンパスDグループ。<br>
+              <h3 class="card__title">企画制作</h3>
+              <p class="card__content">名古屋キャンパスDグループ。<br>
                 岩田ののか<br>
                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
             </div>
