--- a/final.html
+++ b/final.html
@@ -66,7 +66,8 @@ Youtube貼り付けここまで-->
               <h3 class="card__title">企画制作</h3>
               <p class="card__content">名古屋キャンパスDグループ。<br>
                 岩田ののか<br>
-                テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                濱中悠真<br>
+              橋本惇矢<br</p>
             </div>
           </div>
         </div>
