--- a/final.html
+++ b/final.html
@@ -23,8 +23,7 @@
       <div class="container">
         <div class="box bg-color--subcolor">
           <h2 class="section-title--border">全ステージ クリア！</h2>
-          <p class="text-center">おめでとう！あなたはついに全ての謎を解き、先生を救うことができた！<br>
-            そして先生からあるメッセージが伝えられた・・・</p>
+          <p class="text-center">おめでとう！無事scp2000の起動に成功し、世界の再構築をすることができた。<br></p>
         </div>
       </div>
     </section>
