--- a/final.html
+++ b/final.html
@@ -43,15 +43,15 @@ Youtube貼り付けここまで-->
           ß
       </div>
          -->
-        <p class="text-center">あなたはきっと、このメッセージをずっと忘れることはないだろう・・・。<br>
-          これからも家庭科室が封鎖されるようなことがあったら、<br>
+        <p class="text-center">scp2000によって元の世界を取り戻した私たちはAクラス職員委クラス上げされ<br>
+          財団内の最高位の管理職員にのみ与えられるレベル5セキュリティクリアランスを与えられた。<br>
           この教訓をしっかり思い出してくれ。</p>
-        <p class="text-center">それでは、また会おう！</p>
+        <p class="text-center">二人庭申し訳ないが、あの2の分も楽しく生き抜こう！</p>
       </div>
     </section>
     <section class="section bg-color--keycolor">
       <div class="container">
-        <h2 class="section-title">遊んでくれてありがとう！</h2>
+        <h2 class="section-title">Thanks for playing！</h2>
         <p class="font-eng text-center">Special Thanks</p>
         <div class="row">
           <div class="column">
