--- a/final.html
+++ b/final.html
@@ -43,10 +43,9 @@ Youtube貼り付けここまで-->
           ß
       </div>
          -->
-        <p class="text-center">scp2000によって元の世界を取り戻した私たちはAクラス職員委クラス上げされ<br>
-          財団内の最高位の管理職員にのみ与えられるレベル5セキュリティクリアランスを与えられた。<br>
-          この教訓をしっかり思い出してくれ。</p>
-        <p class="text-center">二人庭申し訳ないが、あの2の分も楽しく生き抜こう！</p>
+        <p class="text-center">scp2000によって元の世界を取り戻した私たちはAクラス職員にクラス上げされ<br>
+          財団内の最高位の管理職員にのみ与えられるレベル5セキュリティクリアランスを与えられた。<br></p>
+        <p class="text-center">2人には申し訳ないが、あの2の分も楽しく生き抜こう！</p>
       </div>
     </section>
     <section class="section bg-color--keycolor">
