--- a/main.html
+++ b/main.html
@@ -197,10 +197,10 @@ Youtube貼り付けここまで -->
         <!-- STAGE3-1問題セクション　ここから -->
         <section class="section">
           <div class="container">
-            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>家庭科室の課題とは</h2>
-            <p class="text-center">黒板から得たメッセージは、「食物の廃棄問題」だった。<br>
-              どうやら、廃棄にかかる費用がかかりすぎて小学校の運営が厳しくなったようだ。。<br>
-              これらを解決するための最後の謎を解いていこう！</p>
+            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>SCP2000の起動には・・・</h2>
+            <p class="text-center">イエローストーン国立公園は我々が出発した場所だった。<br>
+              SCP2000の付近には起動することができず殉職したエージェントが倒れていた・・・<br>
+              SCP2000を起動するため最後の謎を解かなければ</p>
             <figure class="image__container">
               <img src="assets/images/stage.png" alt="">
             </figure>
