--- a/main.html
+++ b/main.html
@@ -106,10 +106,10 @@ Youtube貼り付けここまで -->
         <section>
           <div class="section">
             <div class="container">
-              <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>黒板に書かれている謎を解け！</h2>
-              <p class="text-center">家庭科室に入ることができた！<br>
-                すぐに目に入ったのは黒板にある４つの謎。<br>
-                これらを解くことで、きっと次のステップに繋がるはずだ！</p>
+              <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>施設を出るには</h2>
+              <p class="text-center">CSP2000の場所は分かったが扉がロックされて開くことができない・・・<br>
+                出るためにはパスワードが必要らしい。<br>
+                2人には情報を探してもらい我々は謎を解こう</p>
             </div>
           </div>
           <div class="stage-column__container section bg-color--keycolor">
