--- a/final.html
+++ b/final.html
@@ -68,6 +68,10 @@ Youtube貼り付けここまで-->
               橋本惇矢<br</p>
             </div>
           </div>
+          <div class="column">
+            <div class="card">
+              <h3 class="card__title">リアル脱出ゲームとは</h3>
+              <p class="card__content">2004年に発表されたネットで爆発的に盛り上がった「脱出ゲーム」を、そのフォーマットそのままに現実世界に移し替えた大胆な遊びが「リアル脱出ゲーム」。マンションの1室や廃校、廃病院、そして東京ドームや六本木ヒルズなど、様々な場所で開催され、2007年に初開催して以降、現在までで累計820万人以上を動員。日本のみならず上海、台湾、シンガポールやサンフランシスコなど全世界で参加者を興奮の渦に巻き込み
         </div>
       </div>
     </section>
