--- a/final.html
+++ b/final.html
@@ -45,7 +45,7 @@ Youtube貼り付けここまで-->
          -->
         <p class="text-center">scp2000によって元の世界を取り戻した私たちはAクラス職員にクラス上げされ<br>
           財団内の最高位の管理職員にのみ与えられるレベル5セキュリティクリアランスを与えられた。<br></p>
-        <p class="text-center">2人には申し訳ないが、あの2の分も楽しく生き抜こう！</p>
+        <p class="text-center">2人には申し訳ないが、あの2人の分も楽しく生き抜こう！</p>
       </div>
     </section>
     <section class="section bg-color--keycolor">
@@ -61,17 +61,18 @@ Youtube貼り付けここまで-->
           </div>
           <div class="column">
             <div class="card">
-              <h3 class="card__title">企画制作</h3>
-              <p class="card__content">名古屋キャンパスDグループ。<br>
-                岩田ののか<br>
-                濱中悠真<br>
-              橋本惇矢<br</p>
+              <h3 class="card__title">SCP財団とは</h3>
+              <p class="card__content">SCP財団（SCPざいだん、英:SCP Foundation）とは、架空の組織の名称であるとともにそれについての共同創作を行う同名のコミュニティサイトである。<br>
+                サイトの主要な創作物は、自然法則に反した存在・物品・場所（「SCPオブジェクト」）を封じ込める方法を示す”特別収容プロトコル”を記した報告書であるが、そのほかにもSCP財団に関する様々な形式の掌編（サイト内では「財団Tales」またはTalesと呼ばれる）がコミュニティ参加者によって執筆されている。これらはWiki形式のウェブサイトに投稿され、まとめられている。</p>
             </div>
           </div>
           <div class="column">
             <div class="card">
-              <h3 class="card__title">リアル脱出ゲームとは</h3>
-              <p class="card__content">2004年に発表されたネットで爆発的に盛り上がった「脱出ゲーム」を、そのフォーマットそのままに現実世界に移し替えた大胆な遊びが「リアル脱出ゲーム」。マンションの1室や廃校、廃病院、そして東京ドームや六本木ヒルズなど、様々な場所で開催され、2007年に初開催して以降、現在までで累計820万人以上を動員。日本のみならず上海、台湾、シンガポールやサンフランシスコなど全世界で参加者を興奮の渦に巻き込み
+              <h3 class="card__title">企画制作</h3>
+              <p class="card__content">名古屋キャンパスDグループ<br>
+                岩田ののか<br>
+                濱中悠真<br>
+                橋本惇矢<br></p>
         </div>
       </div>
     </section>
