--- a/final.html
+++ b/final.html
@@ -63,7 +63,9 @@ Youtube貼り付けここまで-->
             <div class="card">
               <h3 class="card__title">SCP財団とは</h3>
               <p class="card__content">SCP財団（SCPざいだん、英:SCP Foundation）とは、架空の組織の名称であるとともにそれについての共同創作を行う同名のコミュニティサイトである。<br>
-                サイトの主要な創作物は、自然法則に反した存在・物品・場所（「SCPオブジェクト」）を封じ込める方法を示す”特別収容プロトコル”を記した報告書であるが、そのほかにもSCP財団に関する様々な形式の掌編（サイト内では「財団Tales」またはTalesと呼ばれる）がコミュニティ参加者によって執筆されている。これらはWiki形式のウェブサイトに投稿され、まとめられている。<br>
+                サイトの主要な創作物は、自然法則に反した存在・物品・場所（「SCPオブジェクト」）を封じ込める方法を示す”特別収容プロトコル”を記した報告書であるが、そのほかにもSCP財団に関する様々な形式の掌編（サイト内では「財団Tales」またはTalesと呼ばれる）がコミュニティ参加者によって執筆されている。これらはWiki形式のウェブサイトに投稿され、まとめられている。
+                <br>
+                <br>
                <a href="https://ja.wikipedia.org/wiki/SCP%E8%B2%A1%E5%9B%A3" target="_blank">引用元</a></p>
             </div>
           </div>
