--- a/final.html
+++ b/final.html
@@ -73,7 +73,8 @@ Youtube貼り付けここまで-->
               <p class="card__content">名古屋キャンパスDグループ<br>
                 岩田ののか<br>
                 濱中悠真<br>
-                橋本惇矢<br></p>
+                橋本惇矢<br>
+              小野日菜乃</p>
         </div>
       </div>
     </section>
