--- a/main.html
+++ b/main.html
@@ -36,7 +36,7 @@
             <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：1</span>さぁゲームを始めよう！</h2>
             <p class="text-center">まずは施設内を男女2人と我々の2手に分かれて調べることにした<br>
               見つけたPCをしらべると世界を作り直すことのできるものはSCP2000「機械仕掛けの神」というらしい<br>
-            そしてどうやら機械仕掛けの神のありかを調べるには謎をつく必要があるらしい・・・</p>
+            そしてどうやら機械仕掛けの神のありかを調べるには謎を解く必要があるらしい・・・</p>
             <p class="text-center">困ったときは、ヒントがある。なるべく見ないようにゲームを進めていこう。</p>
   
             <div class="container">
