--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
   </header>
   <main class="main main-page">
     <!-- タイトルエリア　ここから -->
-    <h1 class="main-title"><img src="assets/images/sam.png" alt="サムネイル"></h1>
+    <h1 class="main-title"><img src="assets/images/top.png" alt="トップ画像"></h1>
     <!-- タイトルエリア　ここまで -->
     <div id="stage">
 
