--- a/main.html
+++ b/main.html
@@ -86,9 +86,8 @@ Youtube貼り付けここまで -->
           <div class="container">
             <div class="clear-message">
               <div class="clear-message__title">STAGE：１  クリア！</div>
-              <div class="clear-message__content">家庭科室の扉が開いた！<br>
-                さぁ先生を助けるため<br>
-                ３つステージの謎をとき、暗号を見つけ出そう！</div>
+              <div class="clear-message__content">地図を完成させることができた！<br>
+                早速その場所へ向かってみよう！</div>
               <button v-on:click="nextStage('stage1')" onclick="location.href='#sectionStage2'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
             </div>
           </div>
@@ -110,7 +109,7 @@ Youtube貼り付けここまで -->
               <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>施設を出るには</h2>
               <p class="text-center">CSP2000の場所は分かったが扉がロックされて開くことができない・・・<br>
                 出るためにはパスワードが必要らしい。<br>
-                2人には情報を探してもらい我々は謎を解こう</p>
+                1度戻り情報を集めると2枚の紙が手に入った</p>
             </div>
           </div>
           <div class="stage-column__container section bg-color--keycolor">
