--- a/main.html
+++ b/main.html
@@ -127,7 +127,7 @@ Youtube貼り付けここまで -->
               <div class="row">
 
                 <!-- STAGE2-1　ここから -->
-                <div class="column">
+                <div class="colum">
                   <!-- STAGE2-1問題セクション　ここから -->
                   <figure class="image__container">
                     <img src="assets/images/stage2.png" width="383" height="167">
