--- a/main.html
+++ b/main.html
@@ -36,12 +36,12 @@
             <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：1</span>さぁゲームを始めよう！</h2>
             <p class="text-center">まずは施設内を男女2人と我々の2手に分かれて調べることにした<br>
               見つけたPCをしらべると世界を作り直すことのできるものはSCP2000「機械仕掛けの神」というらしい<br>
-            そしてどうやら機械仕掛けの神のありかを調べるには謎を解く必要があるらしい・・・</p>
+            そしてどうやら「機械仕掛けの神」のありかを調べるには謎を解く必要があるらしい・・・</p>
             <p class="text-center">困ったときは、ヒントがある。なるべく見ないようにゲームを進めていこう。</p>
   
             <div class="container">
               <figure class="image__container">
-                <img src="assets/images/nazo_1.png" alt="">
+                <img src="assets/images/stage1.png" alt="">
               </figure>
                 
  <!--  YouTube貼り付け
@@ -202,7 +202,7 @@ Youtube貼り付けここまで -->
               SCP2000の付近には起動することができず殉職したエージェントが倒れていた・・・<br>
               SCP2000を起動するため最後の謎を解かなければ</p>
             <figure class="image__container">
-              <img src="assets/images/stage.png" alt="">
+              <img src="assets/images/stage3.png" alt="">
             </figure>
           </div>
         </section>
