--- a/hint1.html
+++ b/hint1.html
@@ -42,7 +42,7 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">ヒント<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">動画を最後までみてみよう！</p>
+              <p class="card__content">PCに映し出された色の三原色の表、そして矢印の方向に注目しよう。</p>
             </div>
           </div>
           <div class="column">
