--- a/hint3.html
+++ b/hint3.html
@@ -42,7 +42,9 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">ヒント<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">テキストテキストテキストテキストテキスト</p>
+              <p class="card__content">亡くなっていたエージェントの近くに落ちていた紙を見ると<br>
+              !=1 "=2 #=3<br>
+              と書かれていた</p>
             </div>
               
  <!-- 3-2ヒント追加
