--- a/final.html
+++ b/final.html
@@ -30,7 +30,7 @@
     <section class="section">
       <div class="container">
           <figure class="image__container">
-             <img src="assets/images/stage.png" alt="">
+             <img src="assets/images/top.png" alt="">
           </figure>
 
 <!--  YouTube貼り付け
@@ -40,12 +40,9 @@
               </div>
             </div>
 Youtube貼り付けここまで-->
-          ß
-      </div>
-         -->
+        
         <p class="text-center">scp2000によって元の世界を取り戻した私たちはAクラス職員にクラス上げされ<br>
           財団内の最高位の管理職員にのみ与えられるレベル5セキュリティクリアランスを与えられた。<br></p>
-        <p class="text-center">2人には申し訳ないが、あの2人の分も楽しく生き抜こう！</p>
       </div>
     </section>
     <section class="section bg-color--keycolor">
