--- a/main.html
+++ b/main.html
@@ -36,7 +36,8 @@
             <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：1</span>さぁゲームを始めよう！</h2>
             <p class="text-center">まずは施設内を男女2人と我々の2手に分かれて調べることにした<br>
               見つけたPCをしらべると世界を作り直すことのできるものはSCP2000「機械仕掛けの神」というらしい<br>
-            そしてどうやら「機械仕掛けの神」のありかを調べるには謎を解く必要があるらしい・・・</p>
+            そしてどうやら「機械仕掛けの神」のありかを調べるには謎を解く必要があるらしい・・・<br>
+            ※色で答えてください。</p>
             <p class="text-center">困ったときは、ヒントがある。なるべく見ないようにゲームを進めていこう。</p>
   
             <div class="container">
@@ -182,7 +183,7 @@ Youtube貼り付けここまで -->
             <div class="clear-message">
               <div class="clear-message__title">STAGE：2　クリア！</div>
               <div class="clear-message__content">施設を出ることに成功した我々は<br>
-                完成させた世界地図を参考に我々はSCP2000のあるイエローストーン国立公園向かうことにした。</div>
+                完成させた世界地図を参考に目的地イエローストーン国立公園というところに向かうことにした。</div>
                 <button v-on:click="nextStage('stage2')" onclick="location.href='#sectionStage3'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
             </div>
           </div>
