--- a/main.html
+++ b/main.html
@@ -201,7 +201,7 @@ Youtube貼り付けここまで -->
             <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>SCP2000の起動には・・・</h2>
             <p class="text-center">イエローストーン国立公園は我々が出発した場所だった。<br>
               SCP2000の付近には起動することができず殉職したエージェントが倒れていた・・・<br>
-              SCP2000を起動するため最後の謎を解かなければ</p>
+              SCP2000を起動するためは？</p>
             <figure class="image__container">
               <img src="assets/images/stage3.png" alt="">
             </figure>
