--- a/final.html
+++ b/final.html
@@ -23,7 +23,8 @@
       <div class="container">
         <div class="box bg-color--subcolor">
           <h2 class="section-title--border">全ステージ クリア！</h2>
-          <p class="text-center">おめでとう！無事scp2000の起動に成功し、世界の再構築をすることができた。<br></p>
+          <p class="text-center">指定された座標に向かうとそこにはSCP2000の起動手順が書かれたメモがあった<br>
+            無事scp2000の起動に成功し、世界の再構築をすることができた。<br></p>
         </div>
       </div>
     </section>
