--- a/main.html
+++ b/main.html
@@ -200,7 +200,7 @@ Youtube貼り付けここまで -->
           <div class="container">
             <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>SCP2000の起動には・・・</h2>
             <p class="text-center">イエローストーン国立公園は我々が出発した場所だった。<br>
-              SCP2000を起動方法を知るためには謎を解かなければいけないらしい・・・<br</p>
+              SCP2000を起動方法を知るためには謎を解かなければいけないらしい・・・<br></p>
             <figure class="image__container">
               <img src="assets/images/stage3.png" alt="">
             </figure>
