--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="story">
           <p class="text-center">時は20XX年・・・<br>
             ある日SCPの大脱走によって世界は破滅への道を淡々と進んでいくのであった<br>
-            地下施設に潜り生き残った我々はこの世界を生き残るためにSCP財団のとある施設へと向かうことにした。
+            地下施設に潜り生き残った我々はこの世界を生き残るためにscp財団というscpを取り扱う組織のとある施設へ向かうことにした。
           到着した財団施設には財団組織の男女2人組いた。<br>
           彼らによると世界を作り直すごとができるかもしれないという・・・</p>
         </div>
